--- a/chat-transitions/README
+++ b/chat-transitions/README
@@ -1,1 +1,33 @@
-Build a json parser which builds a transitions based chat bot
+A json parser which builds a python-transitions based chat bot
+
+A quick example. See the json below
+
+
+{
+  "variables": ["name"],
+
+  "states": [
+    {
+      "name":"begin",
+      "on_enter_say": "Hi %name%, welcome to my shop."
+    },
+    {
+      "name":"serve_food",
+      "on_enter_say": "Here is your food."
+    },
+    {
+      "name": "serve_drinks",
+      "on_enter_say": "Here is your drink."
+    }
+
+  ]
+  "transitions": [
+    ["begin", "serve_food", ["needsfood", "!needsdrink"]],
+    ["begin", "serve_drinks", ["!needsfood", "needsdrinks"]]
+  ]
+}
+
+
+The above json has 3 states, each has a name. On entering each state something is said to the user as mentioned in the "on_enter_say" field.
+The transitions array mentions two possible transitions. The first field in a transition array member is the beginning state, the second field is the final state, and the third field is an array of function names which must conditionally be true (or false, if there is a ! at the beginning) for the transition to happen.
+
